<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Changement du mot de passe"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nom d'utilisateur :" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/username"/>

    <TextView
        android:id="@+id/status_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="status_username" />

    <TextView
        android:id="@+id/label_pwd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mot de passe actuel :" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/status_pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="status_pwd" />

    <TextView
        android:id="@+id/label_pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nouveau mot de passe." />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/new_password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/label_pwd3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vérification du nouveau mot de passe." />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/password1"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/status_pwd3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="status_pwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edtButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:layout_marginLeft="10dp"
            android:text="Valider" />

        <TextView
            android:id="@+id/tv_Counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1/3" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/edtQuitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:layout_marginRight="10dp"
            android:text="Quitter" />
    </LinearLayout>

    <TextView
        android:id="@+id/status_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="status_registration" />

</LinearLayout>
