<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Saisie identifiants"
        android:textAppearance="?android:attr/textAppearanceLarge" />
-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <!-- identifier-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_identifier"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"

            android:hint="@string/identifier"
            app:hintTextAppearance="@style/TextInputLayoutHintText"

            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"

            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterOverflowTextColor="@color/colorRed"
            app:counterTextColor="@color/black"

            app:endIconDrawable="@drawable/red_cross_transparent"
            app:endIconMode="clear_text"
            app:endIconTint="@null"
            app:endIconTintMode="screen"

            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/error_transparent"
            app:errorIconTint="@null"
            app:errorTextColor="@color/colorRed"

            app:helperText="valid identifier required"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/colorBlue"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_identifier"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="48dp"
                android:maxLength="20"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="0dp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- end identifier -->

        <!-- pwd1 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_pwd1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:enabled="false"

            android:hint="@string/password_"
            app:hintTextAppearance="@style/TextInputLayoutHintText"

            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"

            app:counterEnabled="true"
            app:counterMaxLength="20"

            app:counterOverflowTextColor="@color/colorRed"
            app:counterTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_pwd1"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:maxLength="20"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="0dp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- end pwd1 -->

        <!-- pwd2 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_pwd2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:enabled="false"

            android:hint="@string/re_enter_password"
            app:hintTextAppearance="@style/TextInputLayoutHintText"

            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp"

            app:counterEnabled="true"
            app:counterMaxLength="20"

            app:counterOverflowTextColor="@color/colorRed"

            app:counterTextColor="@color/black"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_pwd2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="20sp"
                android:maxLength="20"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_register_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:text="@string/register_status" />
        <!-- end pwd2 -->
    </LinearLayout>

<!-- buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Btn_Validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/valider" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Btn_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/quit" />
    </LinearLayout>

</LinearLayout>

    <!--
                app:endIconDrawable="@drawable/red_cross_transparent"
                app:endIconMode="clear_text"
                app:endIconTint="@null"
                app:endIconTintMode="screen"

            app:errorEnabled="true"

            app:errorIconTint="@null"
            app:errorTextColor="@color/red"

            app:helperText="valid password required"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/blue"
            app:errorIconDrawable="@drawable/error_transparent"

            android:hint="@string/re_enter_password"



    -->